# CoTracker

./: .gitignore  .replit  cameras.db  index.html  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.js
attached_assets/: Pasted--GIS-Zero-Trust-GP-1761126613915_1761126613915.txt
backend/: database.py  main.py  models.py
backend/services/: camera_service.py  google_sheets.py
backend/utils/: auth.py
frontend/src/: App.jsx  index.css
frontend/src/components/: AuthForm.jsx  MapView.jsx
