[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.119.1",
    "google-api-python-client>=2.185.0",
    "google-auth-oauthlib>=1.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.2",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
